# BeforeBuy

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
app/api/snapshot/: route.ts
app/api/stocks/search/: route.ts
app/stocks/[slug]/: ComparisonDashboard.tsx  page.tsx
components/: DetailChrome.tsx  DomesticPeerSection.tsx  EtfHoldingsSection.tsx  GlobalPeerEtfSection.tsx  IndustryMap.tsx  SearchExplorer.tsx  StockEtfComparisonSection.tsx
data/curated/: business_exposure_rules.json  etf_holdings.json  global_rules.json
lib/: format.ts  search-navigation.mjs
lib/data/: alternative-relations.ts  catalog.ts  direct-peers.ts  global-insights.ts  krx-master.ts  providers.ts  sector-profiles.ts  stock-insights.ts
pipeline/: README.md  build_company_taxonomy.py  build_direct_candidates.py  build_global_links.py  build_semiconductor_candidates.py  build_semiconductor_universe.py  build_similarity.py  collect_dart_business.py  collect_krx_master.py  dart_client.py  prepare_web_profiles.py
pipeline/tests/: test_collection_cache.py  test_company_taxonomy.py  test_dart_client.py  test_direct_candidates.py  test_global_links.py  test_krx_master.py  test_semiconductor_candidates.py  test_semiconductor_universe.py  test_similarity.py  test_web_profiles.py
scripts/: check-snapshot.mjs
tests/: app.test.mjs  search-navigation.test.mjs  use-cases.test.mjs
